route.nr-spar-prod-frontend-vanity.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  creationTimestamp: "2024-08-14T12:11:59Z"
  labels:
    app: nr-spar-prod
  name: nr-spar-prod-frontend-vanity
  namespace: b9d53b-prod
  resourceVersion: "14682412261"
  uid: 822bf176-ffe6-494b-b200-f3577ebfb485
spec:
  host: spar.nrs.gov.bc.ca
  port:
    targetPort: 3000-tcp
  tls:
    caCertificate: "-----BEGIN CERTIFICATE-----\r\nMIIFDjCCA/agAwIBAgIMDulMwwAAAABR03eFMA0GCSqGSIb3DQEBCwUAMIG+MQsw\r\nCQYDVQQGEwJVUzEWMBQGA1UEChMNRW50cnVzdCwgSW5jLjEoMCYGA1UECxMfU2Vl\r\nIHd3dy5lbnRydXN0Lm5ldC9sZWdhbC10ZXJtczE5MDcGA1UECxMwKGMpIDIwMDkg\r\nRW50cnVzdCwgSW5jLiAtIGZvciBhdXRob3JpemVkIHVzZSBvbmx5MTIwMAYDVQQD\r\nEylFbnRydXN0IFJvb3QgQ2VydGlmaWNhdGlvbiBBdXRob3JpdHkgLSBHMjAeFw0x\r\nNTEwMDUxOTEzNTZaFw0zMDEyMDUxOTQzNTZaMIG6MQswCQYDVQQGEwJVUzEWMBQG\r\nA1UEChMNRW50cnVzdCwgSW5jLjEoMCYGA1UECxMfU [...]
      CERTIFICATE-----\r\n"
    certificate: "-----BEGIN CERTIFICATE-----\r\nMIIGyTCCBbGgAwIBAgIQJA1JA/Sg9AQ57d3xl55OqjANBgkqhkiG9w0BAQsFADCB\r\nujELMAkGA1UEBhMCVVMxFjAUBgNVBAoTDUVudHJ1c3QsIEluYy4xKDAmBgNVBAsT\r\nH1NlZSB3d3cuZW50cnVzdC5uZXQvbGVnYWwtdGVybXMxOTA3BgNVBAsTMChjKSAy\r\nMDEyIEVudHJ1c3QsIEluYy4gLSBmb3IgYXV0aG9yaXplZCB1c2Ugb25seTEuMCwG\r\nA1UEAxMlRW50cnVzdCBDZXJ0aWZpY2F0aW9uIEF1dGhvcml0eSAtIEwxSzAeFw0y\r\nNDA2MTExODE2NTNaFw0yNTA2MTExODE2NTJaMIGRMQswCQYDVQQGEwJDQTEZMBcG\r\nA1UECBMQQnJpdGlzaCBDb2x1bWJpYTERMA8GA1UEBxM [...]
      CERTIFICATE-----\r\n"
    key: |
      -----BEGIN PRIVATE KEY-----
      MIIEvQIBADANBgkqhkiG9w0BAQEFAASCBKcwggSjAgEAAoIBAQCu+OyW/pD+Fysl
[...]
      uYJjaaOe1O4EoU8Gqur0u70=
      -----END PRIVATE KEY-----
    termination: edge
  to:
    kind: Service
    name: nr-spar-prod-frontend
    weight: 100
  wildcardPolicy: None
status:
  ingress:
  - conditions:
    - lastTransitionTime: "2025-06-05T23:57:56Z"
      status: "True"
      type: Admitted
    host: spar.nrs.gov.bc.ca
    routerCanonicalHostname: router-default.apps.silver.devops.gov.bc.ca
    routerName: default
    wildcardPolicy: None
