route.nr-spar-test-frontend-vanity.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  creationTimestamp: "2024-07-02T21:48:22Z"
  labels:
    app: nr-spar-test
  name: nr-spar-test-frontend-vanity
  namespace: b9d53b-test
  resourceVersion: "14631222124"
  uid: eea13263-90ee-4928-a90a-803496fd0249
spec:
  host: spar-tst.nrs.gov.bc.ca
  port:
    targetPort: 3000-tcp
  tls:
    caCertificate: "-----BEGIN CERTIFICATE-----\r\nMIIFDjCCA/agAwIBAgIMDulMwwAAAABR03eFMA0GCSqGSIb3DQEBCwUAMIG+MQsw\r\nCQYDVQQGEwJVUzEWMBQGA1UEChMNRW50cnVzdCwgSW5jLjEoMCYGA1UECxMfU2Vl\r\nIHd3dy5lbnRydXN0Lm5ldC9sZWdhbC10ZXJtczE5MDcGA1UECxMwKGMpIDIwMDkg\r\nRW50cnVzdCwgSW5jLiAtIGZvciBhdXRob3JpemVkIHVzZSBvbmx5MTIwMAYDVQQD\r\nEylFbnRydXN0IFJvb3QgQ2VydGlmaWNhdGlvbiBBdXRob3JpdHkgLSBHMjAeFw0x\r\nNTEwMDUxOTEzNTZaFw0zMDEyMDUxOTQzNTZaMIG6MQswCQYDVQQGEwJVUzEWMBQG\r\nA1UEChMNRW50cnVzdCwgSW5jLjEoMCYGA1UECxMfU [...]
      CERTIFICATE-----\r\n"
    certificate: "-----BEGIN CERTIFICATE-----\r\nMIIG1DCCBbygAwIBAgIQChvTuJT+hokyxtmruftzFDANBgkqhkiG9w0BAQsFADCB\r\nujELMAkGA1UEBhMCVVMxFjAUBgNVBAoTDUVudHJ1c3QsIEluYy4xKDAmBgNVBAsT\r\nH1NlZSB3d3cuZW50cnVzdC5uZXQvbGVnYWwtdGVybXMxOTA3BgNVBAsTMChjKSAy\r\nMDEyIEVudHJ1c3QsIEluYy4gLSBmb3IgYXV0aG9yaXplZCB1c2Ugb25seTEuMCwG\r\nA1UEAxMlRW50cnVzdCBDZXJ0aWZpY2F0aW9uIEF1dGhvcml0eSAtIEwxSzAeFw0y\r\nNDA2MTExODE5NTBaFw0yNTA2MTExODE5NDlaMIGVMQswCQYDVQQGEwJDQTEZMBcG\r\nA1UECBMQQnJpdGlzaCBDb2x1bWJpYTERMA8GA1UEBxM [...]
      CERTIFICATE-----\r\n"
    key: |
      -----BEGIN PRIVATE KEY-----
      MIIEvgIBADANBgkqhkiG9w0BAQEFAASCBKgwggSkAgEAAoIBAQC3hcwrFhRkN9id
[...]
      I83YSP5keUg1rD9DLp84nvZ5
      -----END PRIVATE KEY-----
    termination: edge
  to:
    kind: Service
    name: nr-spar-test-frontend
    weight: 100
  wildcardPolicy: None
status:
  ingress:
  - conditions:
    - lastTransitionTime: "2024-07-02T21:48:22Z"
      status: "True"
      type: Admitted
    host: spar-tst.nrs.gov.bc.ca
    routerCanonicalHostname: router-default.apps.silver.devops.gov.bc.ca
    routerName: default
    wildcardPolicy: None
