route.nr-spar-test-frontend.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"route.openshift.io/v1","kind":"Route","metadata":{"annotations":{},"labels":{"app":"nr-spar-test"},"name":"nr-spar-test-frontend","namespace":"b9d53b-test"},"spec":{"host":"nr-spar-test.apps.silver.devops.gov.bc.ca","port":{"targetPort":"3000-tcp"},"tls":{"insecureEdgeTerminationPolicy":"Redirect","termination":"edge"},"to":{"kind":"Service","name":"nr-spar-test-frontend","weight":100}}}
  creationTimestamp: "2025-06-05T23:34:41Z"
  labels:
    app: nr-spar-test
  name: nr-spar-test-frontend
  namespace: b9d53b-test
  resourceVersion: "14682221958"
  uid: 6faa9b80-d2d0-4163-b611-56a3c84de836
spec:
  host: nr-spar-test.apps.silver.devops.gov.bc.ca
  port:
    targetPort: 3000-tcp
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: nr-spar-test-frontend
    weight: 100
  wildcardPolicy: None
status:
  ingress:
  - conditions:
    - lastTransitionTime: "2025-06-05T23:34:41Z"
      status: "True"
      type: Admitted
    host: nr-spar-test.apps.silver.devops.gov.bc.ca
    routerCanonicalHostname: router-default.apps.silver.devops.gov.bc.ca
    routerName: default
    wildcardPolicy: None
